--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -121,3 +121,14 @@ body,
 .custom-shadow {
   box-shadow: 0px 2px 15px 5px #d0c6cc;
 } */
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
